fix code-blocks overflowing divs with overflow
Changing to overflow: auto over line breaks to better suit code display conventions and UX

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -150,9 +150,10 @@ kbd, code {
 pre {
     background-color: $codeblock-background;
     padding: 0.5em;
+    overflow: auto;
+    
     code {
         background-color: transparent;
-        white-space: preserve;
     }
 }
 
